Fix wrong size of color pickers
The size of CustomColorPicker is determined in em units, i.e. dependent on the current font size. Since the font size has been increased previously, the color pickers were too large. Assigning a smaller font size to the color pickers fixes the issue.

--- a/src/main/resources/de/mfo/surfer/css/style.css
+++ b/src/main/resources/de/mfo/surfer/css/style.css
@@ -177,3 +177,7 @@ TilePane.galleryIconContainer {
     -fx-background-color: #FFFFFF;
     -fx-alignment: center;
 }
+
+.my-custom-color {
+    -fx-font-size: 13px;
+}
